--- a/FirstWebMVC/FirstWebMVC.csproj
+++ b/FirstWebMVC/FirstWebMVC.csproj
@@ -10,4 +10,8 @@
       <Folder Include="wwwroot\assets\images\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Lorem.NetCore" Version="1.0.0" />
+    </ItemGroup>
+
 </Project>
